--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -28,9 +28,11 @@
 
 {% if site.owner.researchgate %}<p style="text-indent:0;"><a href="{{ site.owner.researchgate}}"><img src="https://caihanlin.com/images/logo/icons8-rg.png" width="14" height="14"></i> ResearchGate</a></p>{% endif %}
 
-{% if site.owner.zhihu %}<p style="text-indent:0;"><a href="{{ site.owner.zhihu }}"><img src="https://caihanlin.com/images/logo/icons8-zhihu-96.png" width="15.8" height="15.8"></i> Zhihu</a></p>{% endif %}
+{% if site.owner.zhihu %}<p style="text-indent:0;"><a href="{{ site.owner.zhihu }}"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/icons8-zhihu-96.png" width="15.8" height="15.8"></i> Zhihu</a></p>{% endif %}
 
-{% if site.owner.bilibili %}<p style="text-indent:0;"><a href="https://space.bilibili.com/{{ site.owner.bilibili }}"><img src="https://caihanlin.com/images/logo/icons8-retro-tv-100.png" width="15" height="15"></i> Bilibili</a></p>{% endif %}
+{% if site.owner.bilibili %}<p style="text-indent:0;"><a href="https://space.bilibili.com/{{ site.owner.bilibili }}"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/icons8-retro-tv-100.png" width="15" height="15"></i> Bilibili</a></p>{% endif %}
+
+{% if site.owner.kaggle %}<p style="text-indent:0;"><a href="https://www.kaggle.com/{{ site.owner.kaggle }}"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/kaggle.png" width="15" height="15"></i> Bilibili</a></p>{% endif %}
 
 
 <!-- Lastly modified by Hanlin CAI in 2023/10/15 -->
