--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -32,7 +32,7 @@
 
 {% if site.owner.bilibili %}<p style="text-indent:0;"><a href="https://space.bilibili.com/{{ site.owner.bilibili }}"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/icons8-retro-tv-100.png" width="15" height="15"></i> Bilibili</a></p>{% endif %}
 
-{% if site.owner.kaggle %}<p style="text-indent:0;"><a href="{{ site.owner.kaggle }}"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/kaggle.png" width="15" height="15"></i> Kaggle </a></p>{% endif %}
+{% if site.owner.kaggle %}<p style="text-indent:0;"><a href="https://www.kaggle.com/noorchauhan"><img src="https://raw.githubusercontent.com/noorchauhan/noorchauhan.github.io/main/images/logo/kaggle.png" width="15" height="15"></i> Kaggle </a></p>{% endif %}
 
 
 <!-- Lastly modified by Hanlin CAI in 2023/10/15 -->
